--- a/style.css
+++ b/style.css
@@ -7,34 +7,42 @@ html{
     scroll-behavior: smooth;
 }
 body{
-
+    background-color: #0f172a; 
+    background-image: 
+        radial-gradient(circle at 20% 30%, rgba(255, 0, 150, 0.3), transparent 40%),
+        radial-gradient(circle at 70% 20%, rgba(0, 200, 255, 0.2), transparent 50%),
+        radial-gradient(circle at 50% 70%, rgba(255, 255, 0, 0.15), transparent 60%),
+        radial-gradient(circle at 35% 95%, rgba(255, 255, 0, 0.15), transparent 60%);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-/*Main Container*/
-main{
+.container{
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
 }
-/*Basic Styling For Blocks*/
 header, footer, .about-me-label, .my-projects-label, .contact-me-label, .about-me-main, .contact-me-main, .my-projects-main{
     width: 90%;
     margin-top: 10px;
     margin-bottom: 10px;
 }
-/*Bg settings for all except container for my projects (it wont have bg)*/
-header, footer, .about-me-label, .my-projects-label, .contact-me-label, .about-me-main, .contact-me-main{
-    background-color: black;
+header, footer, .about-me-label, .my-projects-label, .contact-me-label, .about-me-main, .contact-me-main, .project{
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255,255,255,0.3);
+    border-radius: 50px;
 }
-/*Size for small blocks*/
 header, footer, .about-me-label, .my-projects-label, .contact-me-label{
     height: 100px;
 }
-/*Size for big blocks (temporary)*/
 .about-me-main, .contact-me-main{
-    padding: 10px;
     height: 500px;
+}
+.about-me-main, .project, footer{
+    padding: 20px;
 }
 .my-projects-main{
     display: grid;
@@ -43,17 +51,13 @@ header, footer, .about-me-label, .my-projects-label, .contact-me-label{
     gap: 20px;
 }
 .project{
-    padding: 10px;
     height: 300px;
-    background-color: black;
 }
-/*Text Styling*/
 li, h1, h3, a{
     font-family: "Zalando Sans Expanded", sans-serif;
     color: white;
     text-decoration: none;
 }
-/*Labels*/
 .about-me-label, .my-projects-label, .contact-me-label{
     display: flex;
     align-items: center;
@@ -68,7 +72,7 @@ header ul {
   list-style: none;
   display: flex;
   flex-direction: row;
-  gap: 20px;             
+  gap: 20px;
   margin: 0;
   padding: 0;
 }
@@ -77,7 +81,8 @@ header li{
 }
 .logo{
     margin-left: 10px;
-    margin-right: 10px;
+    margin-right: 20px;
     width: 80px;
     height: 80px;
+    border-radius: 50%;
 }
