--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,8 @@ h2 {
   color: #bc0048;
 }
 
-h3 {
-  color: #262633;
+h3, h4 {
+  color: #37374a;
 }
 
 /* ----------------------------- */
@@ -192,7 +192,7 @@ h3 {
   display: flex;
   flex-direction: column;
   gap: 15px;
-  max-height: 500px;
+  max-height: 600px;
   overflow-y: auto;
   overflow-x: hidden; 
   padding-right: 10px; 
@@ -209,7 +209,7 @@ h3 {
 
 .project-image {
   width: 100%;
-  height: 200px;
+  height: 350px;
   object-fit: cover;
   border-radius: 10px 10px 0 0;
 }
@@ -263,11 +263,13 @@ h3 {
 a {
   display: flex; 
   align-items: center;
+  justify-content: center;
   text-decoration: none;
   color: inherit;
   padding: 5px 10px;
   background-color: #262633;
   border-radius: 5px;
+  text-align: center;
 }
 
 .project-content a{
